--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,9 +19,16 @@ add_executable(test_ivfpq
     src/quantizer.cpp
 )
 
-add_executable(test_sift1m 
-    src/test_sift1m.cpp
+add_executable(test_rii_sift1m 
+    src/test_rii_sift1m.cpp
     src/index_rii.h
+    src/pqkmeans.cpp
+    src/quantizer.cpp
+)
+
+add_executable(test_ivf_sift1m 
+    src/test_ivf_sift1m.cpp
+    src/index_ivfpq.h
     src/pqkmeans.cpp
     src/quantizer.cpp
 )
@@ -38,24 +45,34 @@ target_compile_options(test_rii PRIVATE
     -mtune=native
 )
 
-target_compile_options(test_sift1m PRIVATE
+target_compile_options(test_rii_sift1m PRIVATE
     -Ofast
     -march=native
     -mtune=native
 )
 
+target_compile_options(test_ivf_sift1m PRIVATE
+    -Ofast
+    -march=native
+    -mtune=native
+)
 
-set(MPI "/var/lib/docker/lcj_graph_partitioning/mpi/openmpi-1.4.5")
-find_package(MPI REQUIRED)
+set(OpenMP "/var/lib/docker/lcj_graph_partitioning/mpi/openmpi-1.4.5")
+find_package(OpenMP REQUIRED)
+include_directories(${OpenMP_CXX_INCLUDE_DIRS})
+# set(MPI "/var/lib/docker/lcj_graph_partitioning/mpi/openmpi-1.4.5")
+# find_package(MPI REQUIRED)
 
-if(MPI_CXX_FOUND)
-    include_directories(${MPI_CXX_INCLUDE_DIRS})
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MPI_CXX_COMPILE_FLAGS}")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MPI_CXX_COMPILE_FLAGS}")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${MPI_CXX_LINK_FLAGS}")
-else()
-    message(WARNING "MPI NOT found")
-endif()
+
+# if(MPI_CXX_FOUND)
+#     include_directories(${MPI_CXX_INCLUDE_DIRS})
+#     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MPI_CXX_COMPILE_FLAGS}")
+#     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MPI_CXX_COMPILE_FLAGS}")
+#     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${MPI_CXX_LINK_FLAGS}")
+#     message("MPI found: ${MPI_CXX_INCLUDE_DIRS}")
+#     else()
+#     message(WARNING "MPI NOT found")
+# endif()
 
 # set(HDF5_ROOT "/var/lib/docker/lcj_ym_IR/hdf5/install_path")
 find_package(HDF5 REQUIRED COMPONENTS CXX)
@@ -68,15 +85,24 @@ endif()
 
 target_link_libraries(test_rii PRIVATE
     ${MPI_CXX_LIBRARIES}
+    # OpenMP::OpenMP_CXX
 )
 
 target_link_libraries(test_ivfpq PRIVATE
     ${MPI_CXX_LIBRARIES}
+    OpenMP::OpenMP_CXX
 )
 
-target_link_libraries(test_sift1m PRIVATE
+target_link_libraries(test_rii_sift1m PRIVATE
     ${HDF5_LIBRARIES}
     ${MPI_CXX_LIBRARIES}
+    OpenMP::OpenMP_CXX
+)
+
+target_link_libraries(test_ivf_sift1m PRIVATE
+    ${HDF5_LIBRARIES}
+    ${MPI_CXX_LIBRARIES}
+    OpenMP::OpenMP_CXX
 )
 
 message("HDF5 LIB: ${HDF5_LIBRARIES}")
