[New] Raw IVFIndex implemented & Tested. [New] Direction encode first implemented.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,7 +13,8 @@ set(TEST_SOURCES
     test_ivfpq_sift1m_baseline.cpp
     test_ivfpq_sift1m_pred.cpp
     test_ivfpq_sift1m_obs.cpp
-    test_ivf_sift1m.cpp
+    test_ivf_sift1m_baseline.cpp
+    test_ivf_sift1m_pred.cpp
     test_rii.cpp
     test_rii_pred_sift1m.cpp
     test_rii_sift1m.cpp
