[Test] pred_01 and vote for segs. [New] python files for workload pretest.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,6 +13,8 @@ set(TEST_SOURCES
     test_ivfpq_gist1m_baseline.cpp
     test_ivfpq_sift1m_baseline.cpp
     test_ivfpq_sift1m_pred.cpp
+    test_ivfpq_sift1m_pred_vote.cpp
+    test_ivfpq_sift1m_pred_01.cpp
     test_ivfpq_gist1m_obs.cpp
     test_ivfpq_sift1m_obs.cpp
     test_ivf_sift1m_baseline.cpp
