--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,14 +5,14 @@ project(Toy)
 set(CMAKE_CXX_STANDARD 17)
 
 add_library(toy SHARED  
-    binary_io.h
-    distance.h
-    hdf5_io.h
-    index_ivf.h
-    index_ivfpq.h
-    kmeans.h
+    binary_io.hpp
+    distance.hpp
+    # hdf5_io.h
+    index_ivf.cpp
+    index_ivfpq.cpp
+    kmeans.hpp
     quantizer.cpp
-    util.h
+    util.cpp
 )
 
 target_compile_options(toy PUBLIC
@@ -22,9 +22,11 @@ target_compile_options(toy PUBLIC
 )
 
 target_include_directories(toy PUBLIC
-    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>)
+    $<BUILD_INTERFACE: ${PROJECT_SOURCE_DIR}>
+)
 
 target_link_libraries(toy PUBLIC
-            ${HDF5_CXX_LIBRARIES}
-            ${MPI_CXX_LIBRARIES}
-            OpenMP::OpenMP_CXX)
+            # ${HDF5_CXX_LIBRARIES}
+            # ${MPI_CXX_LIBRARIES}
+            OpenMP::OpenMP_CXX
+)
