--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,4 @@ include_directories(${OpenMP_CXX_INCLUDE_DIRS})
 
 add_subdirectory(src)
 add_subdirectory(tests)
-
-# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+add_subdirectory(toolkits)
