--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,20 +2,21 @@ cmake_minimum_required(VERSION 3.10)
 
 project(Toy)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
 set(TEST_SOURCES
-    test_binary_io.cpp
+    # test_binary_io.cpp
     # test_hdf5_io.cpp
     test_ivf.cpp
-    test_ivfpq.cpp
+    # test_ivfpq.cpp
     test_ivfpq_gist1m_baseline.cpp
     test_ivfpq_sift1m_baseline.cpp
     test_ivfpq_sift10m_baseline.cpp
+    test_ivf_gist1m_baseline.cpp
     test_ivf_sift1m_baseline.cpp
     test_ivf_sift10m_baseline.cpp
     test_ivf_sift100m_baseline.cpp
-    test_ivfpq_load_book.cpp
+    # test_ivfpq_load_book.cpp
 )
 
 foreach(TEST_SOURCE ${TEST_SOURCES})
