tweaks: distance.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,4 +59,4 @@ TARGET_LINK_LIBRARIES(
 
 # ADD_SUBDIRECTORY(src)
 ADD_SUBDIRECTORY(tests)
-# ADD_SUBDIRECTORY(toolkits)
+ADD_SUBDIRECTORY(toolkits)
